updated the application to use a theme button

--- a/src/Login.css
+++ b/src/Login.css
@@ -27,7 +27,7 @@
   color: white;
   background-color: green;
 }
-.login__google {
+.login-google__btn {
   background-color: #4285f4;
 }
 .login div {
