updated the css files to have hover effect on button and to only use scss themedbutton for the buttons

--- a/src/components/button/ThemedButton.scss
+++ b/src/components/button/ThemedButton.scss
@@ -10,9 +10,14 @@
   background-color: green;
 
   &:hover {
+    background-color: seagreen;
     cursor: pointer;
   }
 }
 .secondary__btn {
   background-color: #4285f4;
+  &:hover {
+    background-color: steelblue;
+    cursor: pointer;
+  }
 }
