--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -3,9 +3,8 @@
   width: 100vw;
   display: flex;
   align-items: center;
-
   justify-content: center;
-
+  background-color: black;
   div {
     margin-top: 7px;
   }
@@ -15,7 +14,8 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-color: #cccccc;
+  background-color: #fffef0;
+  border-radius: 5px;
   padding: 30px;
 }
 
