--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -29,3 +29,11 @@
   font-size: 18px;
   margin-bottom: 10px;
 }
+
+.auth__textBox-error {
+  padding: 10px;
+  padding-top: 15px;
+  font-size: 18px;
+  margin-bottom: 10px;
+  border-color: red;
+}
