--- a/src/screens/loggedOut/LoggedOut.scss
+++ b/src/screens/loggedOut/LoggedOut.scss
@@ -4,14 +4,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: whitesmoke;
 }
 
 .logged-out__container {
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-color: #dcdcdc;
-  padding: 30px;
+  background-color: #fffef0;
+  border: 0.5px solid darkolivegreen;
+  border-radius: 5px;
+  padding: 25px;
 }
 
 .logged-out div {
