--- a/src/components/textInput/TextInput.scss
+++ b/src/components/textInput/TextInput.scss
@@ -10,18 +10,18 @@
 }
 
 .input-container:focus-within label {
-  transform: translate(0, 12px) scale(0.6);
+  transform: translate(0, 10px) scale(0.6);
   color: black;
 }
 
 .input-container .filled {
-  transform: translate(0, 12px) scale(0.6);
+  transform: translate(0, 10px) scale(0.6);
 }
 
 .input-container label {
   position: absolute;
   pointer-events: none;
-  transform: translate(0, 20px) scale(1);
+  transform: translate(0, 16px) scale(1);
   transform-origin: top left;
   transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
   color: white;
@@ -32,7 +32,7 @@
 }
 
 .input-container input {
-  height: 32px;
+  height: 24px;
   border-radius: 4px;
   border: none;
   color: white;
@@ -43,9 +43,9 @@
   outline: none;
   box-shadow: none;
   transition: 200ms cubic-bezier(0, 0, 0.2, 1) 0ms;
-  background-color: rgba(0, 0, 0, 0.322);
+  background-color: rgba(26, 25, 25, 0.33);
 }
 
 .input-container input:focus {
-  box-shadow: 0 0 0 2px black;
+  box-shadow: 0 0 0 1px darkolivegreen;
 }
