updated stylings a little m ore

--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -30,7 +30,12 @@
 
 .auth__link {
   color: #4285f4;
-  &:active {
+
+  &:hover {
     color: steelblue;
+  }
+
+  &:active {
+    color: lightsteelblue;
   }
 }
