--- a/src/screens/dashboard/Dashboard.scss
+++ b/src/screens/dashboard/Dashboard.scss
@@ -2,6 +2,7 @@
   height: 100vh;
   width: 100vw;
   display: flex;
+  flex-direction: container;
   align-items: center;
   justify-content: center;
   background-color: whitesmoke;
