changed balck to a darker color olive.

--- a/src/components/textInput/TextInput.scss
+++ b/src/components/textInput/TextInput.scss
@@ -11,7 +11,7 @@
 
 .input-container:focus-within label {
   transform: translate(0, 10px) scale(0.6);
-  color: black;
+  color: rgb(35, 44, 19);
 }
 
 .input-container .filled {
